prod/deployment.yaml
# prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  labels:
    app: sample-app
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
        env: prod
    spec:
      containers:
      - name: sample-app
        image: 127770962422.dkr.ecr.ap-northeast-2.amazonaws.com/sample-project:bec91eb9a78e0c1269bdac7ea4ab4ef074cd3a81
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
