prod/service.yaml
# prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  labels:
    env: prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: sample-app
